--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^8.10.0",
     "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
+    "fast-deep-equal": "^3.1.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
